Fix update forms' image field for post and update

--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -808,6 +808,11 @@ body {
       background: var(--blue);
       color: #fbee85;
     }
+
+    #div_id_userpic div div.input-group.mb-2,
+    #div_id_image div div.input-group.mb-2 {
+      display: none;
+    }
   /*----------------------------------------------------Account*/
     .login-block {
       margin-top: 6%;
