--- a/templates/profile.html
+++ b/templates/profile.html
@@ -34,7 +34,7 @@
                     <div class="accordion-item">
                       <h2 class="accordion-header" id="flush-headingThree">
                         <button class="accordion-button collapsed fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                          Saved posts
+                          Saved posts ({{ user.userprofile.bookmarks.all.count }})
                         </button>
                       </h2>
                       <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#saved-posts">
