--- a/templates/delete.html
+++ b/templates/delete.html
@@ -6,7 +6,7 @@
 <section>
     <div class="row">
         <div class="col-md-12 d-flex flex-column text-center justify-content-center mt-lg-3 mt-md-5 mt-5 mb-4">
-            <a href="{% url 'full' post.slug %}" class="btn link-primary mb-3 mt-1"><<< Back to the post</a>
+            <a href="{% url 'main:full' post.slug %}" class="btn link-primary mb-3 mt-1"><<< Back to the post</a>
         </div>
         <div class="col-md-12 d-flex flex-column text-center justify-content-center mt-lg-3 mt-md-5 mt-5 mb-4">
             <h2>Are you sure you want to delete this post?</h2>
