--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -174,6 +174,10 @@ body {
     padding: 0;
   }
 
+  #count {
+    font-size: 10px;
+  }
+
   .navbar ul, .auth-gr ul {
     margin: 0;
     padding: 0;
