--- a/templates/unread.html
+++ b/templates/unread.html
@@ -7,7 +7,11 @@
         url: "{% url 'main:unread' %}",
         contentType: "application/json",
         success: function (response) {
-            $('#count').html(response['unread'])
+            if (response > 0) {
+            $('#count').html(response['unread'])}
+            else {
+            $('#count').hide()
+            }
         },
         error: function (error) {
             console.log(error)
