--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
+  <link rel="icon" type="image/png" href="{% static 'assets/img/favicon.png' %}">
 
   <!-- External CSS -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
