--- a/templates/unread.html
+++ b/templates/unread.html
@@ -7,7 +7,7 @@
         url: "{% url 'main:unread' %}",
         contentType: "application/json",
         success: function (response) {
-            if (response > 0) {
+            if (response["unread"] > 0) {
             $('#count').html(response['unread'])}
             else {
             $('#count').hide()
