Add a sender label to the chat interface

--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -841,6 +841,12 @@ body {
       }
     }
 
+    .sender {
+      font-style: italic;
+      font-size: 13px;
+      color: #a6b3c5 !important;
+    }
+
   /*----------------------------------------------------Account*/
     .login-block {
       margin-top: 6%;
