Update css: search logo properties

--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -686,7 +686,7 @@ body {
 
   .search-logo {
     height: 140px;
-    width: fit-content;
+    width: auto;
   }
 
   .form-control:focus ~ #search-button {
