--- a/templates/base.html
+++ b/templates/base.html
@@ -61,33 +61,45 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="bi bi-dot"></i> <a href="#">I can help.host</a></li>
-              <li><i class="bi bi-dot"></i> <a href="#">Good translator</a></li>
-              <li><i class="bi bi-dot"></i> <a href="#">List of charities</a></li>
-              <li><i class="bi bi-dot"></i> <a href="#">Donate here</a></li>
-              <li><i class="bi bi-dot"></i> <a href="#">Help Ukraine</a></li>
+              <li><i class="bi bi-dot"></i> <a href="https://icanhelp.host/" target="_blank"
+                aria-label="Accomodation for refugees in people's houses (opens in a new tab)">I can help.host</a></li>
+              <li><i class="bi bi-dot"></i> <a href="https://translate.google.com/?sl=auto&tl=uk&op=translate&hl=en" target="_blank"
+                aria-label="Goggle translate (opens in a new tab)">Good translator</a></li>
+              <li><i class="bi bi-dot"></i> <a href="https://impactful.ninja/best-charities-for-ukraine/" target="_blank"
+                aria-label="List of legit charities 2023 (opens in a new tab)">List of charities</a></li>
+              <li><i class="bi bi-dot"></i> <a href="https://war.ukraine.ua/donate/" target="_blank"
+                aria-label="The official website of Ukraine, List of Charities (opens in a new tab)">Donate here</a></li>
+              <li><i class="bi bi-dot"></i> <a href="https://war.ukraine.ua/support-ukraine/" target="_blank"
+                aria-label="The official website of Ukraine (opens in a new tab)">Help Ukraine</a></li>
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our site</h4>
             <ul>
-              <li><i class="bi bi-dot"></i> <a href="#">FAQ</a></li>
-              <li><i class="bi bi-dot"></i> <a href="#">About us</a></li>
-              <li><i class="bi bi-dot"></i> <a href="#">Contact us</a></li>
-              <li><i class="bi bi-dot"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bi bi-dot"></i> <a href="#">Privacy policy</a></li>
+              <li><i class="bi bi-dot"></i> <a href="{% url 'main:home' %}#faq">FAQ</a></li>
+              <li><i class="bi bi-dot"></i> <a href="{% url 'main:home' %}#about">About us</a></li>
+              <li><i class="bi bi-dot"></i> <a href="{% url 'main:home' %}#contact">Contact us</a></li>
+              <li><i class="bi bi-dot"></i> <a href="https://helpu-terms.mynotice.io/" target="_blank"
+                aria-label="Terms of service (opens in a new tab)">Terms of service</a></li>
+              <li><i class="bi bi-dot"></i> <a href="https://www.freeprivacypolicy.com/live/d2a97e3d-2606-44c5-98c6-01e360abe780" target="_blank"
+                aria-label="Privacy policy (opens in a new tab)">Privacy policy</a></li>
             </ul>
           </div>
 
           <div class="col-lg-2 col-md-6 footer-links social">
             <ul>
               <br>
-              <li><a href="#" class="whatsapp"><i class="bx bxl-whatsapp"></i></a></li>
-              <li><a href="#" class="telegram"><i class="bx bxl-telegram"></i></a></li>
-              <li><a href="#" class="facebook"><i class="bx bxl-facebook"></i></a></li>
-              <li><a href="#" class="instagram"><i class="bx bxl-instagram"></i></a></li>
-              <li><a href="#" class="twitter"><i class="bx bxl-twitter"></i></a></li>
+              <li><a href="https://www.whatsapp.com" target="_blank"
+                aria-label="Whatsapp Chat with Help U (opens in a new tab)" class="whatsapp"><i class="bx bxl-whatsapp"></i></a></li>
+              <li><a href="https://telegram.org" target="_blank"
+                aria-label="Telegram Chat with Help U (opens in a new tab)" class="telegram"><i class="bx bxl-telegram"></i></a></li>
+              <li><a href="https://www.facebook.com" target="_blank"
+                aria-label="Facebook Help U (opens in a new tab)" class="facebook"><i class="bx bxl-facebook"></i></a></li>
+              <li><a href="https://www.instagram.com" target="_blank"
+                aria-label="Instagram Help U (opens in a new tab)" class="instagram"><i class="bx bxl-instagram"></i></a></li>
+              <li><a href="https://twitter.com" target="_blank"
+                aria-label="Twitter Help U (opens in a new tab)" class="twitter"><i class="bx bxl-twitter"></i></a></li>
             </ul>
           </div>
 
