--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,8 @@
           space where nobody is going to judge anyone. Sign up to browse the
           posts and make a difference now!
         </p>
-        <a href="https://war.ukraine.ua/" class="btn-learn-more">Learn More</a>
+        <a href="https://war.ukraine.ua/" target="_blank"
+                aria-label="the official website of Ukraine (opens in a new tab)" class="btn-learn-more">Learn More</a>
       </div>
     </div>
   </section>
