--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -530,7 +530,7 @@ body {
   
   .faq .faq-list p {
     margin-bottom: 0;
-    padding: 10px 0 0 0;
+    padding: 10px 20px 0 30px;
   }
   
   .faq .faq-list .icon-show {
