Update css: chat fit

--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -818,7 +818,8 @@ body {
 
   /*----------------------------------------------------Chat*/
     #js-framework-home {
-      height: 80vh;
+      min-height: 80vh;
+      height: fit-content;
       margin-bottom: -50px;
       width: 50vw;
     }
