--- a/templates/base.html
+++ b/templates/base.html
@@ -7,8 +7,9 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="A platform that connects Ukrainians who need help with those who want to help." name="description">
+  <meta content="Ukraine, Ukraininan refugees, Help, charity, volunteering, free furniture, give away items, give away, free services" name="keywords">
+  <meta name="google-site-verification" content="tzjivbjXG2fsyF_Voc9PLpldhS-_uvCKp37X6zv0gk8" />
 
   <!-- Favicons -->
   <link rel="icon" type="image/png" href="{% static 'assets/img/favicon.png' %}">
