--- a/templates/index.html
+++ b/templates/index.html
@@ -64,7 +64,7 @@
   <!-- End About -->
 
   <!-- FAQ -->
-  <section id="faq" class="faq section-bg d-none d-sm-block">
+  <section id="faq" class="faq section-bg">
     <div class="container" data-aos="fade-up">
       <div class="section-title">
         <h2>Frequently Asked Questions</h2>
