--- a/templates/social_account/login.html
+++ b/templates/social_account/login.html
@@ -1,21 +1,44 @@
-{% extends "social_account/base.html" %}
-{% load i18n %}
+{% extends "base.html" %} {% load static %} {% load i18n %} {% block head_title
+%}{% trans "Sign In" %}{% endblock %} {% block content %}
+<div class="container login-block">
+  <div class="row">
+    <div
+      class="col-md-12 d-flex justify-content-center mt-lg-5 mt-md-5 mt-5 mb-4"
+    >
+      <img class="search-logo" src="{% static 'assets/img/logo_small.png' %}" />
+    </div>
+  </div>
+  <div class="row">
+    <div
+      class="col-md-12 d-flex flex-column justify-content-center mt-lg-3 mt-md-5 mt-5 mb-4"
+    >
+      {% if process == "connect" %}
+      <h1 class="text-center">
+        {% blocktrans with provider.name as provider %}Connect {{ provider }}{%
+        endblocktrans %}
+      </h1>
 
-{% block head_title %}{% trans "Sign In" %}{% endblock %}
+      <p class="text-center px-5">
+        {% blocktrans with provider.name as provider %}You are about to connect
+        a new third party account from {{ provider }}.{% endblocktrans %}
+      </p>
+      {% else %}
+      <h1 class="text-center">
+        {% blocktrans with provider.name as provider %}Sign In Via {{ provider
+        }}{% endblocktrans %}
+      </h1>
 
-{% block content %}
-{% if process == "connect" %}
-<h1>{% blocktrans with provider.name as provider %}Connect {{ provider }}{% endblocktrans %}</h1>
+      <p class="text-center px-5">
+        {% blocktrans with provider.name as provider %}You are about to sign in
+        using a third party account from {{ provider }}.{% endblocktrans %}
+      </p>
+      {% endif %}
 
-<p>{% blocktrans with provider.name as provider %}You are about to connect a new third party account from {{ provider }}.{% endblocktrans %}</p>
-{% else %}
-<h1>{% blocktrans with provider.name as provider %}Sign In Via {{ provider }}{% endblocktrans %}</h1>
-
-<p>{% blocktrans with provider.name as provider %}You are about to sign in using a third party account from {{ provider }}.{% endblocktrans %}</p>
-{% endif %}
-
-<form method="post">
-  {% csrf_token %}
-  <button type="submit">{% trans "Continue" %}</button>
-</form>
+      <form method="post">
+        {% csrf_token %}
+        <button type="submit">{% trans "Continue" %}</button>
+      </form>
+    </div>
+  </div>
+</div>
 {% endblock %}
