--- a/templates/social_account/connections.html
+++ b/templates/social_account/connections.html
@@ -1,54 +1,72 @@
-{% extends "socialaccount/base.html" %}
+{% extends "base.html" %} {% load static %} {% load i18n %} {% block head_title
+%}{% trans "Account Connections" %}{% endblock %} {% block content %}
+<div class="container login-block">
+  <div class="row">
+    <div
+      class="col-md-12 d-flex justify-content-center mt-lg-5 mt-md-5 mt-5 mb-4"
+    >
+      <img class="search-logo" src="{% static 'assets/img/logo_small.png' %}" />
+    </div>
+  </div>
+  <div class="row">
+    <div
+      class="col-md-12 d-flex flex-column justify-content-center mt-lg-3 mt-md-5 mt-5 mb-4"
+    >
+      <h1 class="text-center">{% trans "Account Connections" %}</h1>
 
-{% load i18n %}
+      {% if form.accounts %}
+      <p>
+        {% blocktrans %}You can sign in to your account using any of the
+        following third party accounts:{% endblocktrans %}
+      </p>
 
-{% block head_title %}{% trans "Account Connections" %}{% endblock %}
+      <form method="post" action="{% url 'socialaccount_connections' %}">
+        {% csrf_token %}
 
-{% block content %}
-<h1>{% trans "Account Connections" %}</h1>
+        <fieldset>
+          {% if form.non_field_errors %}
+          <div id="errorMsg">{{ form.non_field_errors }}</div>
+          {% endif %} {% for base_account in form.accounts %} {% with
+          base_account.get_provider_account as account %}
+          <div>
+            <label for="id_account_{{ base_account.id }}">
+              <input
+                id="id_account_{{ base_account.id }}"
+                type="radio"
+                name="account"
+                value="{{ base_account.id }}"
+              />
+              <span
+                class="socialaccount_provider {{ base_account.provider }} {{ account.get_brand.id }}"
+                >{{account.get_brand.name}}</span
+              >
+              {{ account }}
+            </label>
+          </div>
+          {% endwith %} {% endfor %}
 
-{% if form.accounts %}
-<p>{% blocktrans %}You can sign in to your account using any of the following third party accounts:{% endblocktrans %}</p>
+          <div>
+            <button type="submit">{% trans 'Remove' %}</button>
+          </div>
+        </fieldset>
+      </form>
 
+      {% else %}
+      <p>
+        {% trans 'You currently have no social network accounts connected to
+        this account.' %}
+      </p>
+      {% endif %}
 
-<form method="post" action="{% url 'socialaccount_connections' %}">
-{% csrf_token %}
+      <h2>{% trans 'Add a 3rd Party Account' %}</h2>
 
-<fieldset>
-{% if form.non_field_errors %}
-<div id="errorMsg">{{ form.non_field_errors }}</div>
-{% endif %}
+      <ul class="socialaccount_providers">
+        {% include "socialaccount/snippets/provider_list.html" with
+        process="connect" %}
+      </ul>
 
-{% for base_account in form.accounts %}
-{% with base_account.get_provider_account as account %}
-<div>
-<label for="id_account_{{ base_account.id }}">
-<input id="id_account_{{ base_account.id }}" type="radio" name="account" value="{{ base_account.id }}"/>
-<span class="socialaccount_provider {{ base_account.provider }} {{ account.get_brand.id }}">{{account.get_brand.name}}</span>
-{{ account }}
-</label>
+      {% include "socialaccount/snippets/login_extra.html" %}
+    </div>
+  </div>
 </div>
-{% endwith %}
-{% endfor %}
-
-<div>
-<button type="submit">{% trans 'Remove' %}</button>
-</div>
-
-</fieldset>
-
-</form>
-
-{% else %}
-<p>{% trans 'You currently have no social network accounts connected to this account.' %}</p>
-{% endif %}
-
-<h2>{% trans 'Add a 3rd Party Account' %}</h2>
-
-<ul class="socialaccount_providers">
-{% include "socialaccount/snippets/provider_list.html" with process="connect" %}
-</ul>
-
-{% include "socialaccount/snippets/login_extra.html" %}
-
 {% endblock %}
