--- a/templates/social_account/login_cancelled.html
+++ b/templates/social_account/login_cancelled.html
@@ -1,15 +1,27 @@
-{% extends "socialaccount/base.html" %}
+{% extends "base.html" %} {% load static %} {% load i18n %} {% block head_title
+%}{% trans "Login Cancelled" %}{% endblock %} {% block content %}
+<div class="container login-block">
+  <div class="row">
+    <div
+      class="col-md-12 d-flex justify-content-center mt-lg-5 mt-md-5 mt-5 mb-4"
+    >
+      <img class="search-logo" src="{% static 'assets/img/logo_small.png' %}" />
+    </div>
+  </div>
+  <div class="row">
+    <div
+      class="col-md-12 d-flex flex-column justify-content-center mt-lg-3 mt-md-5 mt-5 mb-4"
+    >
+      <h1 class="text-center">{% trans "Login Cancelled" %}</h1>
 
-{% load i18n %}
+      {% url 'account_login' as login_url %}
 
-{% block head_title %}{% trans "Login Cancelled" %}{% endblock %}
-
-{% block content %}
-
-<h1>{% trans "Login Cancelled" %}</h1>
-
-{% url 'account_login' as login_url %}
-
-<p>{% blocktrans %}You decided to cancel logging in to our site using one of your existing accounts. If this was a mistake, please proceed to <a href="{{login_url}}">sign in</a>.{% endblocktrans %}</p>
-
-{% endblock %}
+      <p class="text-center px-5">
+        {% blocktrans %}You decided to cancel logging in to our site using one
+        of your existing accounts. If this was a mistake, please proceed to
+        <a href="{{login_url}}">sign in</a>.{% endblocktrans %}
+      </p>
+    </div>
+  </div>
+</div>
+{% endblock %} 
