--- a/templates/social_account/signup.html
+++ b/templates/social_account/signup.html
@@ -1,22 +1,42 @@
-{% extends "socialaccount/base.html" %}
+{% extends "base.html" %} {% load static %} {% load i18n %} {% block head_title
+%}{% trans "Signup" %}{% endblock %} {% block content %}
+<div class="container login-block">
+  <div class="row">
+    <div
+      class="col-md-12 d-flex justify-content-center mt-lg-5 mt-md-5 mt-5 mb-4"
+    >
+      <img class="search-logo" src="{% static 'assets/img/logo_small.png' %}" />
+    </div>
+  </div>
+  <div class="row">
+    <div
+      class="col-md-12 d-flex flex-column justify-content-center mt-lg-3 mt-md-5 mt-5 mb-4"
+    >
+      <h1 class="text-center">{% trans "Sign Up" %}</h1>
 
-{% load i18n %}
+      <p class="text-center px-5">
+        {% blocktrans with provider_name=account.get_provider.name
+        site_name=site.name %}You are about to use your {{provider_name}}
+        account to login to {{site_name}}. As a final step, please complete the
+        following form:{% endblocktrans %}
+      </p>
 
-{% block head_title %}{% trans "Signup" %}{% endblock %}
-
-{% block content %}
-    <h1>{% trans "Sign Up" %}</h1>
-
-<p>{% blocktrans with provider_name=account.get_provider.name site_name=site.name %}You are about to use your {{provider_name}} account to login to
-{{site_name}}. As a final step, please complete the following form:{% endblocktrans %}</p>
-
-<form class="signup" id="signup_form" method="post" action="{% url 'socialaccount_signup' %}">
-  {% csrf_token %}
-  {{ form.as_p }}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-  {% endif %}
-  <button type="submit">{% trans "Sign Up" %} &raquo;</button>
-</form>
-
+      <form
+        class="signup"
+        id="signup_form"
+        method="post"
+        action="{% url 'socialaccount_signup' %}"
+      >
+        {% csrf_token %} {{ form.as_p }} {% if redirect_field_value %}
+        <input
+          type="hidden"
+          name="{{ redirect_field_name }}"
+          value="{{ redirect_field_value }}"
+        />
+        {% endif %}
+        <button type="submit">{% trans "Sign Up" %} &raquo;</button>
+      </form>
+    </div>
+  </div>
+</div>
 {% endblock %}
