Change react div responsive sizing

--- a/templates/messages.html
+++ b/templates/messages.html
@@ -8,7 +8,7 @@
     <div class="row justify-content-center">
       <div class="d-flex justify-content-center col-md-12 mt-xl-0 mt-xl-3">
         <!-- div that React will render in -->
-        <div class="" id="js-framework-home"></div>
+        <div class="col-12 col-md-10 col-lg-8 col-xl-6" id="js-framework-home"></div>
         {{ name|json_script:'name' }}
         {{ id|json_script:'id' }}
         <!-- bundle file with native JavaScript application logic -->
