Fix logo bug on signup page for tablet

--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -10,7 +10,7 @@
 {% block content %}
 <div class="container login-block">
   <div class="row">
-    <div class="col-md-12 d-flex justify-content-center mt-lg-0 mt-md-5 mt-5">
+    <div class="col-md-12 d-flex justify-content-center mt-xl-1 mt-lg-4 mt-md-5 mt-5">
       <img class="search-logo" src="{% static 'assets/img/logo.png' %}">
     </div>
   </div>
