--- a/templates/unread.html
+++ b/templates/unread.html
@@ -1,20 +1,36 @@
 <span id="count" class="position-absolute bottom-100 start-50 badge rounded-pill bg-danger">
     <span class="visually-hidden">unread messages</span>
   </span>
+
 <script>
-    $.ajax({
-        type: 'GET',
-        url: "{% url 'main:unread' %}",
-        contentType: "application/json",
-        success: function (response) {
-            if (response["unread"] > 0) {
-            $('#count').html(response['unread'])}
-            else {
-            $('#count').hide()
-            }
-        },
-        error: function (error) {
-            console.log(error)
-        },
-    })
+var socket = new WebSocket("wss://helpukr.herokuapp.com/notifications/");
+socket.onopen = function() {
+  console.log("Connected to Notifications!");
+};
+socket.onclose = function() {
+  console.log("Disconnected from Notifications!");
+};
+
+// Listen for messages from the server
+socket.onmessage = function(event) {
+  var data = JSON.parse(event.data);
+  switch (data.type) {
+    default:
+      console.error("Unknown message type!");
+      break;
+    case "unread_count":
+      let unread = data.unread_count;
+      if (unread > 0) {
+        $('#count').html(unread)
+      } else {
+      $('#count').hide()
+      };
+    case "new_message_notification":
+      if (data.unread_count == null) {
+        let unread = parseInt($('#count').html()); 
+        unread += 1;
+        $('#count').html(unread);
+      };
+  }
+};
 </script>
